Fix z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,7 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .about .title,
@@ -404,11 +405,11 @@ footer p {
   }
 
   .cta p {
-    font-size: 22px;
+    font-size: 20px;
   }
 
   .about .desc {
-    font-size: 22px;
+    font-size: 20px;
   }
 
   .btn.btn-xl {
@@ -465,16 +466,10 @@ footer p {
     width: 20px;
     height: 20px;
   }
-    .btn.fix-w {
-      min-width: auto;
-    }
-            .cta p {
-              font-size: 20px;
-            }
-      
-            .about .desc {
-              font-size: 20px;
-            }
+
+  .btn.fix-w {
+    min-width: auto;
+  }
 }
 
 @media screen and (max-width: 470px) {
